--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -25,7 +25,7 @@
 	<div class="container-fluid" style="height: 100%;">
 		<div class="row" style="height: 100%;">
 		    <div class="col-lg-2" id='menu' style="height: 100%; padding: 0px">
-			   <nav class="navbar navbar-default sidebar" role="navigation" style=' width: 100%;'>
+			   <nav class="navbar navbar-default sidebar" role="navigation">
 			    <div class="container-fluid">
 			    <div class="navbar-header">
 			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
@@ -56,6 +56,14 @@
 			          <ul class="dropdown-menu forAnimate" role="menu"  style='background: rgba(68, 68, 68, 0.73);'>
 			            <li><a onclick="">Cadastro</a></li>
 			            <li><a onclick="">Consultar</a></li>
+			          </ul>
+			        </li>  
+			         <li class="dropdown">
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="caret" style='margin-right: 10px;'>
+			          </span>Refeiçõe</a>
+			          <ul class="dropdown-menu forAnimate" role="menu"  style='background: rgba(68, 68, 68, 0.73);'>
+			            <li><a onclick="">Cadastro</a></li>
+			            <li><a onclick="">Cardápio</a></li>
 			          </ul>
 			        </li>  
 			      </ul>
