--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -46,7 +46,7 @@
 		                        <div class="panel-body">
 		                            <table class="table">
 		                                <tr>
-		                                    <td>
+		                                    <td onclick="carregar('ConfiguracaoPerfil.xhtml')">
 		                                       Configuração de Perfil
 		                                    </td>
 		                                </tr>
@@ -64,11 +64,6 @@
 		                                <tr>
 		                                    <td onclick="carregar('CadastroFuncionario.xhtml')">
 		                                       Cadastro
-		                                    </td>
-		                                </tr>
-		                                <tr>
-		                                    <td>
-		                                       Permissão
 		                                    </td>
 		                                </tr>
 		                            </table>
@@ -115,6 +110,11 @@
 		                                <tr>
 		                                    <td onclick="carregar('CadastroPrato.xhtml')">
 		                                    	 Cadastro de Prato
+		                                    </td>
+		                                </tr>
+		                                <tr>
+		                                    <td onclick="carregar('CadastroBebida.xhtml')">
+		                                    	 Cadastro de Bebida
 		                                    </td>
 		                                </tr>
 		                                <tr>
