--- a/WebContent/CadastroCliente.xhtml
+++ b/WebContent/CadastroCliente.xhtml
@@ -14,6 +14,7 @@
     <h:outputStylesheet library="css" name="Menu.css" />
     <h:outputStylesheet library="css" name="util.css" />
     <h:outputStylesheet library="css" name="WebRefeicoes.css" />
+    <h:outputStylesheet name="webjars/font-awesome/4.4.0/css/font-awesome.css"/>
     <h:outputScript library="jquery" name="jquery-ui-1.9.2.custom.js" />
     <h:outputScript library="bootstrap/js" name="bootstrap.min.js" />
      <h:outputScript library="jquery" name="jqueryMaskedPlugin.js" />
