Adicionado a tela de avaliação e tela de convenio e arrumado outras coisas

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -127,6 +127,16 @@
 		                                    	 Consulta de Pedidos
 		                                    </td>
 		                                </tr>
+		                                <tr>
+		                                    <td onclick="carregar('Avaliacao.xhtml')">
+		                                    	 Avaliação do Restaurante
+		                                    </td>
+		                                </tr>
+		                                <tr>
+		                                    <td>
+		                                    	 Consultar Avaliação
+		                                    </td>
+		                                </tr>
 		                            </table>
 		                        </div>
 		                    </div>
@@ -149,7 +159,31 @@
 		                        </div>
 		                    </div>
 		                </div>
+		                 <div class="panel panel-default">
+		                    <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+		                        <h4 class="panel-title">
+		                           <i class="fa fa-calendar" style="padding-right: 10px;" aria-hidden="true"></i> Convênio
+		                        </h4>
+		                    </div>
+		                    <div id="collapseFive" class="panel-collapse collapse">
+		                        <div class="panel-body">
+		                            <table class="table">
+		                                <tr>
+		                                    <td onclick="carregar('CadastroConvenio.xhtml')">
+		                                        Cadastro
+		                                    </td>
+		                                </tr>
+		                                 <tr>
+		                                    <td onclick="carregar('CadastroConvenio.xhtml')">
+		                                        Consulta
+		                                    </td>
+		                                </tr>
+		                            </table>
+		                        </div>
+		                    </div>
+		                </div>
 		            </div>
+		            
 		        </div>
 		        <div id="conteudo" class="col-lg-10 col-md-10" style="padding: 10px;background: #eeeeee;">
 				</div>
