--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -29,7 +29,8 @@
 				<div style="width: 100%; height: 80px;background: #680404;">
 					 <img src="resources/images/logo_teste.png" style="height: 75px;margin-right: 10px;"  alt="webrefeicoes"  class="img-respondive"/>
 					 <span style="color: white">WebRefeições</span>
-			 	 	<h:outputText id="display" styleClass="pull-right" style="color: #b03030;font-size: 19px; padding: 3px 9px;" value="#{loginController.funcionario.usuario}" />
+					<h:outputText id="display" styleClass="pull-right" style="color: white;font-size: 15px; padding: 3px 9px;" value="Sair" />
+			 	 	<h:outputText id="display" styleClass="pull-right" style="color: #b03030;font-size: 19px; padding: 3px 9px;" value="#{loginController.cliente.usuario}" />
 		 	 		<h:outputText id="display" styleClass="pull-right" style="color: white;font-size: 22px; padding-right: 10px;"  value="Bem Vindo: " />
 				</div>
 			</div>
@@ -46,17 +47,19 @@
 		                        <div class="panel-body">
 		                            <table class="table">
 		                                <tr>
-		                                    <td onclick="carregar('ConfiguracaoPerfil.xhtml')">
-		                                       Configuração de Perfil
+		                                    <td onclick="carregar('PerfilCliente.xhtml')">
+		                                      Meu Perfil
 		                                    </td>
 		                                </tr>
 		                            </table>
 		                        </div>
 		                    </div>
-		                    <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-		                        <h4 class="panel-title">
-		                          	<i class="fa fa-users" style="    padding-right: 10px;" aria-hidden="true"></i>Funcionário
-		                        </h4>
+		                </div>
+		                <div class="panel panel-default">
+			                <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+			                        <h4 class="panel-title">
+			                          	<i class="fa fa-users" style="    padding-right: 10px;" aria-hidden="true"></i>Funcionário
+			                        </h4>
 		                    </div>
 		                    <div id="collapseOne" class="panel-collapse collapse">
 		                        <div class="panel-body">
@@ -69,7 +72,7 @@
 		                            </table>
 		                        </div>
 		                    </div>
-		                </div>
+			             </div>
 		                <div class="panel panel-default">
 		                    <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
 		                        <h4 class="panel-title">
@@ -128,13 +131,18 @@
 		                                    </td>
 		                                </tr>
 		                                <tr>
-		                                    <td onclick="carregar('Avaliacao.xhtml')">
-		                                    	 Avaliação do Restaurante
+		                                    <td onclick="carregar('ConsultaAvaliacao.xhtml')">
+		                                    	 Consultar Avaliação
+		                                    </td>
+		                                </tr>
+		                                 <tr>
+		                                    <td onclick="carregar('ConsultaPedidosCliente.xhtml')">
+		                                    	 Consultar Meus Pedidos
 		                                    </td>
 		                                </tr>
 		                                <tr>
-		                                    <td>
-		                                    	 Consultar Avaliação
+		                                    <td onclick="carregar('HistoricoPedidos.xhtml')">
+		                                    	Histórico de Pedidos
 		                                    </td>
 		                                </tr>
 		                            </table>
@@ -176,6 +184,24 @@
 		                                 <tr>
 		                                    <td onclick="carregar('CadastroConvenio.xhtml')">
 		                                        Consulta
+		                                    </td>
+		                                </tr>
+		                            </table>
+		                        </div>
+		                    </div>
+		                </div>
+		                <div class="panel panel-default">
+		                	<div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+		                        <h4 class="panel-title">
+		                           <i class="fa fa-money" style="padding-right: 10px;" aria-hidden="true"></i> Pagamento
+		                        </h4>
+		                    </div>
+		                    <div id="collapseSix" class="panel-collapse collapse">
+		                        <div class="panel-body">
+		                            <table class="table">
+		                                <tr>
+		                                    <td onclick="carregar('CadastroBandeira.xhtml')">
+		                                        Cadastro de Bandeira
 		                                    </td>
 		                                </tr>
 		                            </table>
