--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -11,7 +11,8 @@
     <h:outputStylesheet library="bootstrap/css" name="bootstrap.min.css" />
     <h:outputStylesheet library="bootstrap/css" name="bootstrap.css" />
     <h:outputStylesheet library="css" name="login.css" />
-    <h:outputStylesheet library="css" name="Menu.css" />
+    <h:outputStylesheet library="css" name="WebRefeicoes.css" />
+    <h:outputStylesheet library="css" name="util.css" />
     <h:outputScript library="jquery" name="jquery-2.1.4.min.js" />
     <h:outputScript library="bootstrap/js" name="bootstrap.min.js" />
       
@@ -22,42 +23,76 @@
 </h:head>
 <h:body>
 	<div class="bodylogin">
-		<nav class="navbar nav-header navbar-default">
+	<nav class="navbar nav-header navbar-default">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <img src="resources/images/logo_teste.png" style="height: 75px;margin-right: 10px;"  alt="webrefeicoes"  class="img-respondive"/>WebRefeições
 	    </div>
 	  </div>
 	</nav>
-	<div class="headerLogin">
+	
+	<div class="container conteudo">
+		<div class="headerLogin">
 			<img src="resources/images/logo_teste.png" alt="webrefeicoes"  class="img-respondive imgLogin"/>
 		</div>
 	<div class="containerLogin">
-		
 		<div class="conteudoLogin">
 			<h:form id="login">
 				<p:messages id="messages" />
 				<div class="form-group">
 						<p:inputText style="width: 100%" 
 						id="usuario"
-						value="#{loginController.funcionario.usuario}"
+						value="#{loginController.user}"
 						placeholder="Usuário" />
 					</div>
 					<div class="form-group">
 						<p:password style="width: 100%" 
-						 value="#{loginController.funcionario.senha}"
+						 value="#{loginController.senha}"
 						 placeholder="Senha"
 						 id="senha" />
 						 
 					</div>
-				  <p:commandButton value="Entrar" styleClass="btn btn-danger btn-lg btn-block" action="#{loginController.envia}" ajax="false">
+					<div class="form-group">
+						<a data-toggle="modal" data-target="#modalEsqueciSenha" class="esqueciMinhaSenha">
+							<span>Esqueci minha senha</span>
+						</a>
+					</div>
+				  <p:commandButton process="@this" ajax="false" value="Entrar" style="padding: 3px !important" styleClass="btn btn-danger btn-block" update="messages" action="#{loginController.envia}" >
 				  </p:commandButton>
 			</h:form>
+		</div>
+	</div>
+	</div>
+	
+	<div id="modalEsqueciSenha" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
+		
+		    Modal content
+		    <div class="modal-content">
+		      <div class="modal-header headerWebRefeicoes">
+		        <button type="button" class="close" data-dismiss="modal" style="    color: white;">&times;</button>
+		        <h4 class="modal-title">Recuperação de Senha</h4>
+		      </div>
+		      <div class="modal-body">
+		        <p>Digite um e-mail abaixo para prosseguir com a recuperação de e-mail.</p>
+		        <h:form id="senha">
+					<div class="form-group">
+						<p:inputText style="width: 100%" 
+						id="email"
+						value="#{loginController.emailCliente}"
+						placeholder="E-mail" />
+					</div>
+		          <p:commandButton value="Enviar" styleClass="btn btn-success btn-block" action="#{loginController.enviarSenhaNova}" ajax="false">
+				  </p:commandButton>
+		        </h:form>
+		      </div>
+		    </div>
+		
+		  </div>
 		</div>
 	</div>
 	<footer>
   	    <strong>Copyright &copy; 2017 <a href="#" style="color: #6d0000;">WebRefeições</a>.</strong> Todos Direitos Reservados.
 	</footer>
-	</div>
 </h:body>
 </html>
