--- a/WebContent/Avaliacao.xhtml
+++ b/WebContent/Avaliacao.xhtml
@@ -20,7 +20,7 @@
 </h:head>
 <h:body>
 	<div class="container-fluid" id='avaliacao' style="padding: 0px;">
-		<h:form>
+		/*<h:form>
 			<p:growl id="messages" life="5000"/>
 			<div class="col-lg-12" style="    display: -webkit-box;">
 				<span><img src="resources/images/comida.png"></img></span><h2>Refeição</h2>
@@ -34,7 +34,7 @@
 					<i class="fa fa-frown-o" aria-hidden="true"></i>
 					<i class="fa fa-meh-o" aria-hidden="true"></i>
 					<i class="fa fa-smile-o" aria-hidden="true"></i>
-					<div>
+				<div>
 				
 					<p:selectOneRadio  value="#{avaliacaoController.avaliacao.pontuacaoComida}">
 			            <f:selectItem itemLabel="Ruim" itemValue="1" />
